@@ -1711,6 +1711,21 @@
 
 			dpkg-reconfigure locales
 
+			#Pump current system locale into env: https://github.com/Fourdee/DietPi/issues/825
+			local locale_current=$(cat /etc/default/locale | grep -m1 '^LANG=' | sed 's/.*=//')
+
+			#	Sanity, No result, revert back to default
+			if [ -z "$locale_current" ]; then
+
+				locale_current='en_GB.UTF-8'
+
+			fi
+
+			cat << _EOF_ > /etc/environment
+LC_ALL=$locale_current
+LANG=$locale_current
+_EOF_
+
 			#Return to this menu
 			TARGETMENUID=7
 			;;
