@@ -70,14 +70,17 @@
 
 			if [ -f "${aFP_TEMPERATURE[$i]}" ]; then
 
-				CPU_TEMP_CURRENT=$(cat "${aFP_TEMPERATURE[$i]}")
-
-				#Sparky/asus, special case:
+				#	Sparky/asus, special case:
 				if (( $HW_MODEL == 70 || $HW_MODEL == 100 )); then
 
 					CPU_TEMP_CURRENT=$(cat /sys/class/thermal/thermal_zone1/temp)
 
+				else
+
+					CPU_TEMP_CURRENT=$(cat "${aFP_TEMPERATURE[$i]}")
+
 				fi
+
 
 				# - Some devices (pine) provide 2 digit output, some provide a 5 digit ouput.
 				# 	So, If the value is over 1000, we can assume it needs converting to 1'c
