@@ -281,7 +281,7 @@ _EOF_
 			"────Desktops──────────────────────────────────────────────" #0
 			"────Remote Desktop Access─────────────────────────────────" #1
 			"────Media Systems─────────────────────────────────────────" #2
-			"────BitTorrent────────────────────────────────────────────" #3
+			"────BitTorrent / Download Tools───────────────────────────" #3
 			"────Cloud / Backups───────────────────────────────────────" #4
 			"────Emulation & Gaming────────────────────────────────────" #5
 			"────Social / Search───────────────────────────────────────" #6
