@@ -11,9 +11,10 @@ DietPi-Software | Aria2: Download manager with slick web UI interface, now avail
 DietPi-Software | YaCy: Decentralized open source search engine, now available for install: http://dietpi.com/phpbb/viewtopic.php?f=8&t=5&p=6202#p6202
 DietPi-Software | Blynk Server: config file added to the diepi user data folder, thanks to @joaofl: https://github.com/Fourdee/DietPi/pull/810
 DietPi-Software | ShairPort-Sync: Updated to 3.0.2. SOXR interpolation is now enabled by default (will improve sound quality): https://github.com/Fourdee/DietPi/issues/819
-DietPi-Software | MPD: Updated to 19.21. Also includes optional plugin support for UPNP playback: https://github.com/Fourdee/DietPi/issues/821
+DietPi-Software | MPD: Updated to 19.21. Also includes optional plugin support for UPNP playback, can be enabled in /etc/mpd.conf (https://github.com/Fourdee/DietPi/issues/821#issuecomment-288057932): https://github.com/Fourdee/DietPi/issues/821
 
 Bug fixes:
+DietPi-Config | Change Locale: Once changed, the active locale on system will now be pumped into /etc/environment (thanks John for this), this should prevent 0.UTF-8 issues some of our users are reporting: https://github.com/Fourdee/DietPi/issues/825
 DietPi-Software | Removed references for dietpi-uninstall. Many thanks to Pilovali!
 
 -----------------------------------------------------------------------------------------------------------
